[feat] automation done